# vk_video

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  player.cpp  transcode.cpp
app/shaders/: fullscreen.frag  fullscreen.vert
cmake/: FindFFmpeg.cmake  FindPortAudioCpp.cmake
docs/: fix-vulkan-encode.patch
include/vkvideo/: version.h.in
include/vkvideo/context/: context.hpp  display_mode.hpp
include/vkvideo/core/: types.hpp  utility.hpp
include/vkvideo/graphics/: mutex.hpp  swapchain.hpp  tlsem.hpp  tx.hpp  video_frame.hpp  vk.hpp  vma.hpp
include/vkvideo/medias/: ffmpeg.hpp  media.hpp  stb_image_write.hpp  stream.hpp  timing.hpp  video.hpp  wrapper.hpp
src/: CMakeLists.txt  mod.cppm
src/context/: avsync.cppm  context.cpp  context.cppm  mod.cppm
src/core/: clock.cppm  mod.cppm  types.cppm  unique_any.cppm
src/graphics/: mod.cppm  mutex.cpp  queues.cppm  swapchain.cpp  swapchain.cppm  tlsem.cppm  tx.cpp  tx.cppm  vk.cpp  vkc.cppm  vku.cppm  vma.cpp
src/medias/: audio.cppm  audio_frame.cppm  ffmpeg.cppm  hwrescale.comp  hwrescale.cppm  mod.cppm  output.cppm  pipeline.cppm  stb_image_write.cpp  stb_image_write.cppm  stream.cpp  stream.cppm  video.cpp  video.cppm  video_formats.cpp  video_frame.cppm  wrapper.cpp
