# add_shaders(vkvideo_app_shaders shaders/fullscreen.vert shaders/fullscreen.frag)
add_executable(vkvideo_player player.cpp)
target_link_libraries(vkvideo_player PRIVATE vkvideo vkvideo_VulkanHpp)
target_compile_features(vkvideo_player PRIVATE cxx_std_23)
# add_dependencies(vkvideo_player vkvideo_app_shaders)
